Se agregó el calendario en la rama, falta funcionabilidad de las tareas.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.app_tareas"
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
@@ -21,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.example.app_tareas.ClaseCalendario"
+            android:exported="true" />
+
     </application>
 
 </manifest>
