--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,28 +11,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppTareas"
- feature/calendario
-        tools:targetApi="31"/>
-
-
-
-        tools:targetApi="31">
+        android:theme="@style/Theme.AppTareas">
 
         <activity
-
             android:name=".ActivityNuevaTarea"
-            android:exported="true">
+            android:exported="true" />
 
-
-        </activity>
+        <activity
+            android:name=".ClaseCalendario"
+            android:exported="true" />
 
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-
-        </activity>
+            android:exported="true" />
 
         <activity
             android:name=".Activity_Lista_Tareas"
@@ -44,6 +35,5 @@
         </activity>
 
     </application>
- develop
 
 </manifest>
