--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
- feature/inicio
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.app_tareas"
- develop
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.app_tareas">
 
     <application
         android:allowBackup="true"
@@ -16,12 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
- feature/inicio
         android:theme="@style/Theme.AppTareas"
         tools:targetApi="31">
-
-
-        android:theme="@style/Theme.AppTareas">
 
         <activity
             android:name=".ActivityNuevaTarea"
@@ -30,32 +22,19 @@
         <activity
             android:name=".ClaseCalendario"
             android:exported="true" />
- develop
 
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
 
         <activity
             android:name=".Activity_Lista_Tareas"
             android:exported="true">
-            <intent-filter>
- feature/inicio
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
-
-
-
-    </application>
-
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
-
- develop
 </manifest>
