Agregar pantalla bienvenida

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.app_tareas"
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
@@ -12,15 +13,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTareas"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".BienvenidaActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Cuando tengas otra pantalla (por ejemplo MainActivity), agregala aquí -->
+        <!--
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        -->
+
     </application>
 
 </manifest>
