--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,18 +23,22 @@
             android:name=".ClaseCalendario"
             android:exported="true" />
 
-
         <activity
-            android:name=".Activity_Lista_Tareas"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".MainActivity"
+            android:name=".BienvenidaActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".Activity_Lista_Tareas"
+            android:exported="true" />
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+
     </application>
 </manifest>
